force-app/main/default/objects/Vehicle__c/fields/Base_Rental_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Rental_Rate__c</fullName>
    <label>Base Rental Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>