force-app/main/default/objects/Vehicle__c/fields/Odometer_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Mileage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Odometer Mileage</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>