force-app/main/default/objects/Vehicle__c/fields/Purchase_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Transaction</label>
    <referenceTo>Purchase_Transaction__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>