force-app/main/default/objects/Vehicle__c/fields/Stationed_Depot__c.field-meta.xml
<CustomField>
    <fullName>Stationed_Depot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stationed Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>