force-app/main/default/objects/Vehicle__c/fields/Vehicle_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Identification_Number__c</fullName>
    <description>The unique number assigned to this vehicle.</description>
    <externalId>true</externalId>
    <label>Vehicle Identification Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>