force-app/main/default/objects/Vehicle__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>