force-app/main/default/objects/Vehicle__c/validationRules/Negative_Mileage_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Mileage_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Odometer_Mileage__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Odometer_Mileage__c</errorDisplayField>
    <errorMessage>Mileage cannot be negative.</errorMessage>
</ValidationRule>