force-app/main/default/objects/Vehicle__c/validationRules/Rental_Rate_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Rental_Rate_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Base_Rental_Rate__c &lt;= 0</errorConditionFormula>
    <errorMessage>Rental Rate cannot be zero or negative.</errorMessage>
</ValidationRule>