force-app/main/default/objects/Vehicle__c/listViews/My_Vehicle_View.listView-meta.xml
<ListView>
    <fullName>My_Vehicle_View</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Identification_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Vehicle_Make__c</columns>
    <columns>Vehicle_Year__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Vehicle View</label>
</ListView>