force-app/main/default/objects/Vehicle__c/listViews/Vehicle_List_View.listView-meta.xml
<ListView>
    <fullName>Vehicle_List_View</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Condition__c</columns>
    <columns>Status__c</columns>
    <columns>Vehicle_Make__c</columns>
    <columns>Vehicle_Model__c</columns>
    <columns>Vehicle_Year__c</columns>
    <columns>Odometer_Mileage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Vehicle List View</label>
</ListView>